Update Water Tank Problem_iofactory.html

--- a/Water Tank Problem_iofactory.html
+++ b/Water Tank Problem_iofactory.html
@@ -30,7 +30,7 @@
         max_block_height_left = []
         block_height = 0
 
-        # Maximum tower height from left to right
+        # Maximum block height from left to right
         for i in range(len(blocks)):
             if blocks[i] > block_height:
                 block_height = blocks[i]
